--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section class="about txt-center">
             <h2 class="title mb-40 fw-medium">About</h2>
-            <img class="mb-20" data-aos="zoom-in" src="images/photo.png" alt="joanne's photo">
+            <img class="mb-20" data-aos="fade-up" src="images/photo.png" alt="joanne's photo">
             <ul class="border-bottom mb-28 pb-23">
                 <li>
                     <h3 class="subtitle fw-bold mb-4">Joanne Chen</h3>
@@ -112,7 +112,8 @@
         <ul>
             <li class="mb-16"><a class="fw-medium text-white"
                     href="mailto:xxxd@hexschool.com">Mail：xxxd@hexschool.com</a></li>
-            <li><a class="fw-medium text-white" href="tel:+886-910123456">Phone Number：0910123456</a></li>
+            <li><a class="fw-medium text-white" href="tel:+886-910123456">Phone
+                    Number：0910123456</a></li>
         </ul>
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
